parser/parser.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "continue";
  var peg$c1 = ";";
  var peg$c2 = "break";
  var peg$c3 = "return";
  var peg$c4 = "{";
  var peg$c5 = "}";
  var peg$c6 = "if";
  var peg$c7 = "(";
  var peg$c8 = ")";
  var peg$c9 = "else";
  var peg$c10 = "while";
  var peg$c11 = "switch";
  var peg$c12 = "case";
  var peg$c13 = ":";
  var peg$c14 = "default:";
  var peg$c15 = "for";
  var peg$c16 = "+=";
  var peg$c17 = "-=";
  var peg$c18 = "++";
  var peg$c19 = "--";
  var peg$c20 = "=";
  var peg$c21 = "var";
  var peg$c22 = "||";
  var peg$c23 = "&&";
  var peg$c24 = "!";
  var peg$c25 = "==";
  var peg$c26 = "!=";
  var peg$c27 = ">=";
  var peg$c28 = "<=";
  var peg$c29 = "%";
  var peg$c30 = "-";
  var peg$c31 = "[";
  var peg$c32 = "]";
  var peg$c33 = "int";
  var peg$c34 = "float";
  var peg$c35 = "char";
  var peg$c36 = "boolean";
  var peg$c37 = "string";
  var peg$c38 = "parseInt(";
  var peg$c39 = "parseFloat(";
  var peg$c40 = "toString(";
  var peg$c41 = "toLowerCase(";
  var peg$c42 = "toUpperCase(";
  var peg$c43 = "typeof";
  var peg$c44 = "?";
  var peg$c45 = "System.out.println(";
  var peg$c46 = ",";
  var peg$c47 = "[]";
  var peg$c48 = "new";
  var peg$c49 = "void";
  var peg$c50 = ".";
  var peg$c51 = "true";
  var peg$c52 = "false";
  var peg$c53 = "\"";
  var peg$c54 = "'";
  var peg$c55 = "/*";
  var peg$c56 = "*/";
  var peg$c57 = "//";
  var peg$c58 = "\n";
  var peg$c59 = "\\";

  var peg$r0 = /^[<>]/;
  var peg$r1 = /^[+\-]/;
  var peg$r2 = /^[*\/]/;
  var peg$r3 = /^[ \t\n\r]/;
  var peg$r4 = /^[0-9]/;
  var peg$r5 = /^[^"]/;
  var peg$r6 = /^[^']/;
  var peg$r7 = /^[A-Za-z]/;
  var peg$r8 = /^["_"A-Za-z0-9]/;
  var peg$r9 = /^[^(\n)]/;
  var peg$r10 = /^["\\nt]/;

  var peg$e0 = peg$literalExpectation("continue", false);
  var peg$e1 = peg$literalExpectation(";", false);
  var peg$e2 = peg$literalExpectation("break", false);
  var peg$e3 = peg$literalExpectation("return", false);
  var peg$e4 = peg$literalExpectation("{", false);
  var peg$e5 = peg$literalExpectation("}", false);
  var peg$e6 = peg$literalExpectation("if", false);
  var peg$e7 = peg$literalExpectation("(", false);
  var peg$e8 = peg$literalExpectation(")", false);
  var peg$e9 = peg$literalExpectation("else", false);
  var peg$e10 = peg$literalExpectation("while", false);
  var peg$e11 = peg$literalExpectation("switch", false);
  var peg$e12 = peg$literalExpectation("case", false);
  var peg$e13 = peg$literalExpectation(":", false);
  var peg$e14 = peg$literalExpectation("default:", false);
  var peg$e15 = peg$literalExpectation("for", false);
  var peg$e16 = peg$otherExpectation("Incremental");
  var peg$e17 = peg$literalExpectation("+=", false);
  var peg$e18 = peg$literalExpectation("-=", false);
  var peg$e19 = peg$literalExpectation("++", false);
  var peg$e20 = peg$literalExpectation("--", false);
  var peg$e21 = peg$literalExpectation("=", false);
  var peg$e22 = peg$literalExpectation("var", false);
  var peg$e23 = peg$literalExpectation("||", false);
  var peg$e24 = peg$literalExpectation("&&", false);
  var peg$e25 = peg$literalExpectation("!", false);
  var peg$e26 = peg$literalExpectation("==", false);
  var peg$e27 = peg$literalExpectation("!=", false);
  var peg$e28 = peg$literalExpectation(">=", false);
  var peg$e29 = peg$literalExpectation("<=", false);
  var peg$e30 = peg$classExpectation(["<", ">"], false, false);
  var peg$e31 = peg$classExpectation(["+", "-"], false, false);
  var peg$e32 = peg$classExpectation(["*", "/"], false, false);
  var peg$e33 = peg$literalExpectation("%", false);
  var peg$e34 = peg$literalExpectation("-", false);
  var peg$e35 = peg$literalExpectation("[", false);
  var peg$e36 = peg$literalExpectation("]", false);
  var peg$e37 = peg$literalExpectation("int", false);
  var peg$e38 = peg$literalExpectation("float", false);
  var peg$e39 = peg$literalExpectation("char", false);
  var peg$e40 = peg$literalExpectation("boolean", false);
  var peg$e41 = peg$literalExpectation("string", false);
  var peg$e42 = peg$literalExpectation("parseInt(", false);
  var peg$e43 = peg$literalExpectation("parseFloat(", false);
  var peg$e44 = peg$literalExpectation("toString(", false);
  var peg$e45 = peg$literalExpectation("toLowerCase(", false);
  var peg$e46 = peg$literalExpectation("toUpperCase(", false);
  var peg$e47 = peg$literalExpectation("typeof", false);
  var peg$e48 = peg$literalExpectation("?", false);
  var peg$e49 = peg$literalExpectation("System.out.println(", false);
  var peg$e50 = peg$literalExpectation(",", false);
  var peg$e51 = peg$literalExpectation("[]", false);
  var peg$e52 = peg$literalExpectation("new", false);
  var peg$e53 = peg$literalExpectation("void", false);
  var peg$e54 = peg$otherExpectation("Whitespace");
  var peg$e55 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e56 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e57 = peg$otherExpectation("Float");
  var peg$e58 = peg$literalExpectation(".", false);
  var peg$e59 = peg$literalExpectation("true", false);
  var peg$e60 = peg$literalExpectation("false", false);
  var peg$e61 = peg$otherExpectation("String");
  var peg$e62 = peg$literalExpectation("\"", false);
  var peg$e63 = peg$classExpectation(["\""], true, false);
  var peg$e64 = peg$otherExpectation("char");
  var peg$e65 = peg$literalExpectation("'", false);
  var peg$e66 = peg$classExpectation(["'"], true, false);
  var peg$e67 = peg$otherExpectation("ID");
  var peg$e68 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false);
  var peg$e69 = peg$classExpectation(["\"", "_", "\"", ["A", "Z"], ["a", "z"], ["0", "9"]], false, false);
  var peg$e70 = peg$otherExpectation("Comments");
  var peg$e71 = peg$literalExpectation("/*", false);
  var peg$e72 = peg$literalExpectation("*/", false);
  var peg$e73 = peg$anyExpectation();
  var peg$e74 = peg$literalExpectation("//", false);
  var peg$e75 = peg$classExpectation(["(", "\n", ")"], true, false);
  var peg$e76 = peg$literalExpectation("\n", false);
  var peg$e77 = peg$literalExpectation("\\", false);
  var peg$e78 = peg$classExpectation(["\"", "\\", "n", "t"], false, false);

  var peg$f0 = function(sens) {return createNode("Entry", sens)};
  var peg$f1 = function(sentence, sentences) { return [sentence].concat(sentences); };
  var peg$f2 = function(sentence) { return sentence; };
  var peg$f3 = function() {return []};
  var peg$f4 = function() {return []};
  var peg$f5 = function() {return createNodeVar("continue", "continue");};
  var peg$f6 = function() {return createNodeVar("break", "break");};
  var peg$f7 = function() {return createNodeVar("return", "return");};
  var peg$f8 = function(exp) {const node = createNode("return", [exp]); node.value = "return" ;return node;};
  var peg$f9 = function(sens) {return createNode("sentences", sens);};
  var peg$f10 = function(cond, sentences, senIfE) {return createNode("if",[cond, sentences].concat(senIfE));};
  var peg$f11 = function(cond, sens) {return createNode("if",[cond, sens]);};
  var peg$f12 = function(cond, sentences, senIfE) {return [createNode("else if",[cond,sentences])].concat(senIfE)  ;};
  var peg$f13 = function(cond, sentences) {return createNode("else if",[cond].concat(sentences));};
  var peg$f14 = function(sentences) {return createNode("else", [sentences]);};
  var peg$f15 = function(cond, sens) {return createNode("while", [cond, sens]);};
  var peg$f16 = function(exp, sC) {return createNode("switch",[exp].concat(sC));};
  var peg$f17 = function(exp, sens, sC) {return [createNode("case",[exp,sens])].concat(sC);};
  var peg$f18 = function(exp, sens) {return createNode("case",[exp, sens]);};
  var peg$f19 = function(sens) {return createNode("default",sens);};
  var peg$f20 = function(type, element, array, sens) {return createNode("for_Array", [type, element, array, sens]);};
  var peg$f21 = function(dec, cond, inc, sens) {return createNode("for", [dec, cond, inc, sens]);};
  var peg$f22 = function(i) {return i;};
  var peg$f23 = function(id, inc, exp) {return createNode(inc , [id, exp]);};
  var peg$f24 = function(id, inc) {return createNode(inc, id);};
  var peg$f25 = function(type, id, exp) { return createNode("declaration", [type, id, exp]); };
  var peg$f26 = function(type, id) { return createNode("declaration", [type, id]); };
  var peg$f27 = function(id, exp) { return createNode("declaration", ["var", id, exp]); };
  var peg$f28 = function(id, exp) { return createNode("assign", [id, exp]); };
  var peg$f29 = function(left, right) { return createNode("||", [left, right]); };
  var peg$f30 = function(left, right) { return createNode("&&", [left, right]); };
  var peg$f31 = function(right) { return createNode("!", [right]); };
  var peg$f32 = function(left, op, right) { return createNode(op, [left, right]); };
  var peg$f33 = function(left, op, right) { return createNode(op, [left, right]); };
  var peg$f34 = function(left, op, right) { return createNode(op, [left, right]); };
  var peg$f35 = function(left, op, right) {return createNode(op, [left, right]); };
  var peg$f36 = function(left, op, right) { return createNode(op, [left, right]); };
  var peg$f37 = function(right) { return createNode("-", [right]); };
  var peg$f38 = function(ntF) {return ntF;};
  var peg$f39 = function(terminal) {return terminal;};
  var peg$f40 = function(decimal) {return createNodeVar("float", decimal);};
  var peg$f41 = function(num) {return createNodeVar("int", num);};
  var peg$f42 = function(b) {return createNodeVar("boolean", b);};
  var peg$f43 = function(s) {return createNodeVar("string", s);};
  var peg$f44 = function(c) {return createNodeVar("char", c);};
  var peg$f45 = function(num) {return num};
  var peg$f46 = function(val) {return createNodeVar("Array", text());};
  var peg$f47 = function(type) {return type;};
  var peg$f48 = function(str) {return createNode("parseInt", [str]);};
  var peg$f49 = function(str) {return createNode("parseFloat", [str]);};
  var peg$f50 = function(exp) {return createNode("toString", [exp]);};
  var peg$f51 = function(exp) {return createNode("toLowerCase",[exp]);};
  var peg$f52 = function(exp) {return createNode("toUpperCase", [exp]);};
  var peg$f53 = function(exp) {return createNode("typeof",[exp]);};
  var peg$f54 = function(cond, expT, expF) {return createNode("op3", [cond, expT, expF]);};
  var peg$f55 = function(list) {return createNode("print", list);};
  var peg$f56 = function(listelement, listcons) {return [listelement].concat(listcons);};
  var peg$f57 = function(listelement) {return [listelement]};
  var peg$f58 = function(id, Aexp) { return createNode("Array_declaration", [ id, Aexp]); };
  var peg$f59 = function(type, cor, id) { return createNode("ID", [ type, cor, id ]); };
  var peg$f60 = function(type) {return createNode("new", [type, intg]);};
  var peg$f61 = function(list) { return createNode("list", list); };
  var peg$f62 = function(id, sens) {return createNode("void", sens.concat(re));};
  var peg$f63 = function(sens, re) {return createNode("sentences", sens.concat(re));};
  var peg$f64 = function(int) {return text()};
  var peg$f65 = function() {return text()};
  var peg$f66 = function(bool) {return bool};
  var peg$f67 = function(a) {return text()};
  var peg$f68 = function() {return text()};
  var peg$f69 = function(val) {return createNodeID(location()?.start.line, location()?.start.column, text());};
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsesentences();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsesentences() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsesentence();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesentences();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsesentence();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parsecoments();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f2(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        peg$savedPos = s0;
        s1 = peg$f3();
        s0 = s1;
      }
    }

    return s0;
  }

  function peg$parsesentence() {
    var s0, s1;

    s0 = peg$parseinstruc();
    if (s0 === peg$FAILED) {
      s0 = peg$parsesentenceIf();
      if (s0 === peg$FAILED) {
        s0 = peg$parsesentenceWhile();
        if (s0 === peg$FAILED) {
          s0 = peg$parsesentenceSwitch();
          if (s0 === peg$FAILED) {
            s0 = peg$parsesentenceFor();
            if (s0 === peg$FAILED) {
              s0 = peg$parsesentenceT();
              if (s0 === peg$FAILED) {
                s0 = peg$parseprint();
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parsecoments();
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$f4();
                  }
                  s0 = s1;
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsesentenceT() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 8) === peg$c0) {
      s2 = peg$c0;
      peg$currPos += 8;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 59) {
        s4 = peg$c1;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f5();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (input.substr(peg$currPos, 5) === peg$c2) {
        s2 = peg$c2;
        peg$currPos += 5;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 59) {
          s4 = peg$c1;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s4 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f6();
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsereturn() {
    var s0, s1, s2, s3, s4, s5, s6;
